<resources>

    <!-- Start Activity -->
    <string name="app_name">Lab Exercise 2</string>
    <string name="hello_message">Hello World!</string>
    <string name="launch_button">I\'m a button!</string>
    <string name="chat_button">Start Chat</string>
    <string name="weather_button">Launch Weather Forecast</string>
    <string name="toolbar_button">Launch Toolbar Test</string>

    <!-- Login Activity -->
    <string name="login_label">login</string>
    <string name="login_hint">login name</string>
    <string name="login_button">Login</string>
    <string name="password_label">password</string>
    <string name="password_hint">password</string>
    <string name="result_message_title">"ListItemsActivity Passed: "</string>


    <!-- List Items Activity -->
    <string name="radioButton_text">RadioButton</string>
    <string name="checkBox_text">Finished</string>
    <string name="switch_text">Test Toast Messaging</string>
    <string name="alert_message">"Are you sure you are finished testing?"</string>
    <string name="alert_title">"Finished Testing"</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">Cancel</string>
    <string name="result_message">Here is my response."</string>

    <!-- Chat Window Activity -->
    <string name="sendButtonText">SEND</string>

    <string name="imageButtonDescription">A test of the emulated camera</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>

    <!-- Weather Forecast Activity -->
    <string name="weather_image_description">Shows the current weather.</string>
    <string name="temp_current">---</string>
    <string name="temp_min">---</string>
    <string name="temp_max">---</string>

    <string name="deleteMessageButtonText">Delete this message!</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

</resources>
